@@ -26,7 +26,6 @@ TODO for cope runtime
 - Editor:
 	* resolve conflicts when publishing modifications/drafts
 	* preview for thumbnails
-	* use isBordersEnabled instead of isLoggedIn for triggering css import
 	* provide constants for urls/css classes etc
 	* let filter provide icons for editor bar
 	* let filter provide css/icons as external resources
