@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* Editor provides isBordersEnabled()
+	use  this instead of isLoggedIn() for triggering css import
 * Interrupter from exedio-cope-util.jar is used
 	- affects Dispatcher, Schedule, PasswordRecovery
 * cope now depends on new project copeutil
